@@ -30,8 +30,10 @@ LIST_COLOR_NOT_SELECTED=66FFFF;
 SONGTITLE_XY=113,14;
 SONGTITLE_WIDTH=236;
 SONGTITLE_COLOR=444488;
-ERROR_COLOR=FF0000;
-MESSAGE_COLOR=4466FF;
+ERROR_TEXT_COLOR=FF0000;
+MESSAGE_TEXT_COLOR=4466FF;
+ERROR_WINDOW_COLOR=440000;
+MESSAGE_WINDOW_COLOR=000044;
 
 [GRAPHICS]
 GFX_WIFI_SIZE=64,16;
@@ -48,9 +50,6 @@ GFX_USB_SIZE=32,64;
 GFX_USB_H=32;
 GFX_PLAYSTATE_SIZE=64,32;
 GFX_PLAYSTATE_H=8;
-GFX_ERROR_SIZE=256,128;
-GFX_ERROR_W=256;
-GFX_ERROR_OFFSET=24,48;
 GFX_FONT_LIST_SIZE=8,8;
 GFX_FONT_SCROLLER_SIZE=5,8;
 GFX_FONT_STATIC_SIZE=6,6;
